# jcook3701.docker

./: .ansible-lint  .gitignore  .yamllint  LICENSE  Makefile  README.md  galaxy.yml  pyproject.toml
.github/workflows/: ansible-lint.yml  lint.yml  pages.yml
changelogs/: 1.0.0-alpha.yml  changelog.yml
docs/jekyll/: .gitignore  _config.yml  index.md
docs/sphinx/: conf.py  index.rst
meta/: runtime.yml
